[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelBrowser/LevelBrowser.gd" type="Script" id=1]

[node name="LevelBrowser" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuButton" type="Button" parent="."]
margin_left = 72.0
margin_top = 576.0
margin_right = 192.0
margin_bottom = 624.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 864.0
margin_top = 576.0
margin_right = 984.0
margin_bottom = 624.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsButton" type="Button" parent="."]
margin_left = 192.0
margin_top = 288.0
margin_right = 384.0
margin_bottom = 384.0
text = "Suburbia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomLevelsButton" type="Button" parent="."]
margin_left = 672.0
margin_top = 288.0
margin_right = 864.0
margin_bottom = 384.0
text = "Play Custom Levels"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="CustomLevelsButton" to="." method="_on_CustomLevelsButton_pressed"]
